--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
 
   <div id="resultado" class="output"></div>
 
+<div class="section">
+  <button onclick="generarGuion()">📝 Generar Guion Narrativo</button>
+</div>
+
+<div id="guionNarrativo" class="output"></div>
+
+
+
+  
   <script src="script.js"></script>
 </body>
 </html>
