--- a/index.html
+++ b/index.html
@@ -89,6 +89,17 @@
 
   <div id="guionNarrativo" class="output"></div>
 
+  <!-- Botón de edición por bloques -->
+  <div class="section">
+    <button onclick="editarGuion()">✏️ Editar Guion por Secciones</button>
+  </div>
+
+  <div id="editorGuion" class="output"></div>
+
   <script src="script.js"></script>
+  <script src="editor.js"></script>
+  <script src="config.js"></script>
+  <script src="scenes.js"></script>
 </body>
 </html>
+
