--- a/index.html
+++ b/index.html
@@ -89,12 +89,17 @@
 
   <div id="guionNarrativo" class="output"></div>
 
-  <!-- Botón de edición por bloques -->
   <div class="section">
     <button onclick="editarGuion()">✏️ Editar Guion por Secciones</button>
   </div>
 
   <div id="editorGuion" class="output"></div>
+
+  <div class="section">
+    <button onclick="mostrarEscenas()">🎥 Simular Escenas Visuales</button>
+  </div>
+
+  <div id="escenasVisuales" class="output"></div>
 
   <script src="script.js"></script>
   <script src="editor.js"></script>
@@ -102,4 +107,3 @@
   <script src="scenes.js"></script>
 </body>
 </html>
-
