--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
 
   <div id="escenasVisuales" class="output"></div>
 
+  <div class="section">
+    <button onclick="exportarGuion()">📤 Exportar Guion como TXT</button>
+  </div>
+
   <script src="script.js"></script>
   <script src="editor.js"></script>
   <script src="config.js"></script>
